<resources>
    <string name="app_name">Tugas2</string>
    <string name="example_autocompletetextview">Example showing AutoCompleteTextView</string>
    <string name="example_radiogroup">Example showing RadioGroup</string>
    <string name="spinner_title">Example showing Spinner</string>
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

</resources>
