<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="547dp"
        android:layout_height="0dp"
        android:background="#3F51B5"
        android:text="AplikasiKontrolUI"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="414dp"
        android:layout_height="673dp"

        tools:layout_editor_absoluteY="60dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:onClick="setDate"
            android:text="@string/date_button_set" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/date_label_set"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginTop="66dp"
            android:layout_toLeftOf="@+id/button1"
            android:text="@string/date_view_set"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignRight="@+id/button1"
            android:layout_marginTop="72dp"
            android:text="@string/date_selected"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>